--- a/index.html
+++ b/index.html
@@ -61,11 +61,25 @@ details > *:not(summary) { animation: fadeInSlide 0.3s ease; }
   <summary>Statistics</summary>
 <div class='nested'><a href='notebooks/Data Science/Statistics/1. Introduction to Statistics.html' target='_blank' rel='noopener noreferrer'>- 1. introduction to statistics</a></div>
 <div class='nested'><a href='notebooks/Data Science/Statistics/2. Back to Basics.html' target='_blank' rel='noopener noreferrer'>- 2. back to basics</a></div>
+<div class='nested'><a href='notebooks/Data Science/Statistics/3. Hypothesis Testing.html' target='_blank' rel='noopener noreferrer'>- 3. hypothesis testing</a></div>
+    <details>
+    <summary>datasets</summary>
+    </details>
+    <details>
+    <summary>datasets2</summary>
+    </details>
+  </details>
+  <details>
+  <summary>Statistics Q&A</summary>
+<div class='nested'><a href='notebooks/Data Science/Statistics Q&A/01 Stats Q&A.html' target='_blank' rel='noopener noreferrer'>- 01 stats q&a</a></div>
   </details>
 </details>
 <details>
-<summary>Data Science Q&A</summary>
-<div class='nested'><a href='notebooks/Data Science Q&A/01 Stats Q&A.html' target='_blank' rel='noopener noreferrer'>- 01 stats q&a</a></div>
+<summary>Kaggle</summary>
+<div class='nested'><a href='notebooks/Kaggle/1. How to use kaggle datasets in Jupyter Notebook.html' target='_blank' rel='noopener noreferrer'>- 1. how to use kaggle datasets in jupyter notebook</a></div>
+  <details>
+  <summary>datasets</summary>
+  </details>
 </details>
 <details>
 <summary>Machine Learning Projects</summary>
