tried to fix mobile responsive data frames

--- a/notebooks/Data Science/Statistics/3. Hypothesis Testing.html
+++ b/notebooks/Data Science/Statistics/3. Hypothesis Testing.html
@@ -7507,7 +7507,17 @@ a.anchor-link {
     white-space: normal;
   }
 </style>
-<!-- End of mermaid configuration --><link rel="stylesheet" href="../dark_theme.css"><script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script></head>
+<!-- End of mermaid configuration -->
+    <style>
+    .output_area pre, .output_area table, div.output_html {
+        display: block;
+        overflow-x: auto;
+        white-space: nowrap;
+        max-width: 100%;
+    }
+    </style>
+    
+<link rel="stylesheet" href="../dark_theme.css"><script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script></head>
 <body class="jp-Notebook" data-jp-theme-light="true" data-jp-theme-name="JupyterLab Light">
 <main><div class="jp-Cell jp-CodeCell jp-Notebook-cell" id="cell-id=a0d4dbc6-047d-448a-b343-8ab61a982b9a">
 <div class="jp-Cell-inputWrapper" tabindex="0">
