--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ details > *:not(summary) { animation: fadeInSlide 0.3s ease; }
 <details>
 <summary>Kaggle</summary>
 <div class='nested'><a href='notebooks/Kaggle/1. How to use kaggle datasets in Jupyter Notebook.html' target='_blank' rel='noopener noreferrer'>- 1. how to use kaggle datasets in jupyter notebook</a></div>
+<div class='nested'><a href='notebooks/Kaggle/2. Extrovert vs Introvert Dataset.html' target='_blank' rel='noopener noreferrer'>- 2. extrovert vs introvert dataset</a></div>
   <details>
   <summary>datasets</summary>
   </details>
