--- a/notebooks/Kaggle/2. Extrovert vs Introvert Dataset.html
+++ b/notebooks/Kaggle/2. Extrovert vs Introvert Dataset.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head><meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Terminal</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<title>2. Extrovert vs Introvert Dataset</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <style type="text/css">
     pre { line-height: 125%; }
 td.linenos .normal { color: inherit; background-color: transparent; padding-left: 5px; padding-right: 5px; }
@@ -7519,151 +7519,33 @@ a.anchor-link {
     
 <link rel="stylesheet" href="../dark_theme.css"><script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script></head>
 <body class="jp-Notebook" data-jp-theme-light="true" data-jp-theme-name="JupyterLab Light">
-<main>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=57d1573b-e0ea-4702-8ad9-98fc89873937">
-<div class="jp-Cell-inputWrapper" tabindex="0">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h1 id="Home-Page"><a href="https://brolo231.github.io/Learning-Notebooks/">Home Page</a><a class="anchor-link" href="#Home-Page">¶</a></h1>
-</div>
-</div>
-</div>
-</div>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=80aae7d1-c51e-4320-913e-601b9108b389">
-<div class="jp-Cell-inputWrapper" tabindex="0">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h1 id="Command-Line-Commands">Command Line Commands<a class="anchor-link" href="#Command-Line-Commands">¶</a></h1>
-</div>
-</div>
-</div>
-</div>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=fb01b0eb-041b-4521-bd75-9c7f5d30efdc">
-<div class="jp-Cell-inputWrapper" tabindex="0">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="%F0%9F%93%8C-Table-of-Contents">📌 Table of Contents<a class="anchor-link" href="#%F0%9F%93%8C-Table-of-Contents">¶</a></h2><ul>
-<li><a href="#navigation">1. Navigation &amp; Directory Management</a></li>
-<li><a href="#viewing-editing">2. Viewing &amp; Editing Files</a></li>
-<li><a href="#searching-files">3. Searching &amp; Finding Files</a></li>
-<li><a href="#system-info">4. System Information</a></li>
-<li><a href="#networking">5. Networking Commands</a></li>
-<li><a href="#archiving">6. Archiving &amp; Compression</a></li>
-</ul>
-</div>
-</div>
-</div>
-</div>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=13a656db-4441-4599-bf6b-310043749e78">
-<div class="jp-Cell-inputWrapper" tabindex="0">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="1.-Navigation-&amp;-Directory-Management-">1. Navigation &amp; Directory Management <a id="navigation"></a><a class="anchor-link" href="#1.-Navigation-&amp;-Directory-Management-">¶</a></h2><table>
-<thead>
-<tr>
-<th>Command</th>
-<th>Description</th>
-<th>Linux/macOS</th>
-<th>Windows</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><code>pwd</code></td>
-<td>Print current directory</td>
-<td>✅</td>
-<td>❌</td>
-</tr>
-<tr>
-<td><code>ls</code></td>
-<td>List files in a directory</td>
-<td>✅</td>
-<td>❌</td>
-</tr>
-<tr>
-<td><code>dir</code></td>
-<td>List files in a directory</td>
-<td>❌</td>
-<td>✅</td>
-</tr>
-<tr>
-<td><code>cd foldername</code></td>
-<td>Change active directory</td>
-<td>✅</td>
-<td>✅</td>
-</tr>
-<tr>
-<td><code>cd ..</code></td>
-<td>Move up one directory</td>
-<td>✅</td>
-<td>✅</td>
-</tr>
-<tr>
-<td><code>cd /</code></td>
-<td>Go to root directory</td>
-<td>✅</td>
-<td>✅</td>
-</tr>
-<tr>
-<td><code>cd ~</code></td>
-<td>Go to home directory</td>
-<td>✅</td>
-<td>❌</td>
-</tr>
-<tr>
-<td><code>mkdir foldername</code></td>
-<td>Create a new directory</td>
-<td>✅</td>
-<td>✅</td>
-</tr>
-<tr>
-<td><code>rmdir foldername</code></td>
-<td>Remove empty directory</td>
-<td>✅</td>
-<td>✅</td>
-</tr>
-<tr>
-<td><code>rm -r foldername</code></td>
-<td>Remove directory and all it's contents</td>
-<td>✅</td>
-<td>❌</td>
-</tr>
-<tr>
-<td><code>del /s /q foldername</code></td>
-<td>Remove directory and all it's contents</td>
-<td>❌</td>
-<td>✅</td>
-</tr>
-<tr>
-<td><code>clear</code></td>
-<td>Clears the CLI (command line interface)</td>
-<td>✅</td>
-<td>❌</td>
-</tr>
-</tbody>
-</table>
-<h4 id="When-working-with-command-line-commands-in-Jupyter-notebook-we-can-either-use-'!'-or-'%25'-before-out-command-(only-for-jupyter-notebook).">When working with command line commands in Jupyter notebook we can either use '!' or '%' before out command (only for jupyter notebook).<a class="anchor-link" href="#When-working-with-command-line-commands-in-Jupyter-notebook-we-can-either-use-'!'-or-'%25'-before-out-command-(only-for-jupyter-notebook).">¶</a></h4><h4 id="The-difference-is-that-'!'-creates-a-new-shell-process-executes-the-subprocess-and-then-exits-out-of-it.-So-'!'-is-only-running-in-a-subprocess-whereas-'%25'-wil-create-a-persistent-state-for-commands">The difference is that '!' creates a new shell process executes the subprocess and then exits out of it. So '!' is only running in a subprocess whereas '%' wil create a persistent state for commands<a class="anchor-link" href="#The-difference-is-that-'!'-creates-a-new-shell-process-executes-the-subprocess-and-then-exits-out-of-it.-So-'!'-is-only-running-in-a-subprocess-whereas-'%25'-wil-create-a-persistent-state-for-commands">¶</a></h4>
-</div>
-</div>
-</div>
-</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell" id="cell-id=44532c5e-4059-4af4-ba91-e135d377ad39">
+<main><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs" id="cell-id=805b631c-a8e7-4f98-aefe-bb8c3c886753">
 <div class="jp-Cell-inputWrapper" tabindex="0">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In [47]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In [1]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
-<div class="highlight hl-ipython3"><pre><span></span><span class="c1"># Print current directory</span>
-<span class="o">%</span><span class="k">pwd</span>
+<div class="highlight hl-ipython3"><pre><span></span><span class="c1"># Extrovert vs Introvert dataset has already been loaded from "How to use kaggle datasets in jupyter notebook" </span>
+
+<span class="c1"># Load the dataset</span>
+<span class="kn">import</span> <span class="nn">pandas</span> <span class="k">as</span> <span class="nn">pd</span>
+<span class="n">df</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">read_csv</span><span class="p">(</span><span class="s1">'datasets/personality_dataset.csv'</span><span class="p">)</span>
+</pre></div>
+</div>
+</div>
+</div>
+</div>
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell" id="cell-id=32d43afb-6309-4c6a-842c-f745a3e9a348">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea">
+<div class="jp-InputPrompt jp-InputArea-prompt">In [2]:</div>
+<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
+<div class="cm-editor cm-s-jupyter">
+<div class="highlight hl-ipython3"><pre><span></span><span class="n">df</span><span class="o">.</span><span class="n">head</span><span class="p">()</span>
 </pre></div>
 </div>
 </div>
@@ -7674,290 +7556,108 @@ a.anchor-link {
 </div>
 <div class="jp-OutputArea jp-Cell-outputArea">
 <div class="jp-OutputArea-child jp-OutputArea-executeResult">
-<div class="jp-OutputPrompt jp-OutputArea-prompt">Out[47]:</div>
-<div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain" tabindex="0">
-<pre>'/Users/brandonfourie/Desktop/Pong'</pre>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=bf33d012-629e-4c93-a1f8-fa31d8e56947">
-<div class="jp-Cell-inputWrapper" tabindex="0">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="2.-Viewing-&amp;-Editing-Files-">2. Viewing &amp; Editing Files <a id="viewing-editing"></a><a class="anchor-link" href="#2.-Viewing-&amp;-Editing-Files-">¶</a></h2><table>
+<div class="jp-OutputPrompt jp-OutputArea-prompt">Out[2]:</div>
+<div class="jp-RenderedHTMLCommon jp-RenderedHTML jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/html" tabindex="0">
+<div>
+<style scoped="">
+    .dataframe tbody tr th:only-of-type {
+        vertical-align: middle;
+    }
+
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+
+    .dataframe thead th {
+        text-align: right;
+    }
+</style>
+<table border="1" class="dataframe">
 <thead>
-<tr>
-<th>Command</th>
-<th>Description</th>
-<th>Linux/macOS</th>
-<th>Windows</th>
+<tr style="text-align: right;">
+<th></th>
+<th>Time_spent_Alone</th>
+<th>Stage_fear</th>
+<th>Social_event_attendance</th>
+<th>Going_outside</th>
+<th>Drained_after_socializing</th>
+<th>Friends_circle_size</th>
+<th>Post_frequency</th>
+<th>Personality</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td><code>pycharm .</code></td>
-<td>Open project (directory) in pycharm</td>
-<td>✅</td>
-<td>✅</td>
+<th>0</th>
+<td>4.0</td>
+<td>No</td>
+<td>4.0</td>
+<td>6.0</td>
+<td>No</td>
+<td>13.0</td>
+<td>5.0</td>
+<td>Extrovert</td>
+</tr>
+<tr>
+<th>1</th>
+<td>9.0</td>
+<td>Yes</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>Yes</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>Introvert</td>
+</tr>
+<tr>
+<th>2</th>
+<td>9.0</td>
+<td>Yes</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>Yes</td>
+<td>5.0</td>
+<td>2.0</td>
+<td>Introvert</td>
+</tr>
+<tr>
+<th>3</th>
+<td>0.0</td>
+<td>No</td>
+<td>6.0</td>
+<td>7.0</td>
+<td>No</td>
+<td>14.0</td>
+<td>8.0</td>
+<td>Extrovert</td>
+</tr>
+<tr>
+<th>4</th>
+<td>3.0</td>
+<td>No</td>
+<td>9.0</td>
+<td>4.0</td>
+<td>No</td>
+<td>8.0</td>
+<td>5.0</td>
+<td>Extrovert</td>
 </tr>
 </tbody>
 </table>
 </div>
 </div>
 </div>
-</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs" id="cell-id=0c58f106-9f96-4195-ba76-440550aa0a97">
+</div>
+</div>
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs" id="cell-id=0b243545-8bde-4570-a2ad-bb13eeed146b">
 <div class="jp-Cell-inputWrapper" tabindex="0">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In [20]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In [ ]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
-<div class="highlight hl-ipython3"><pre><span></span><span class="c1"># %pycharm . will not work in Jupyter Notebook but will run in terminal if PyCharm Command Line is set up</span>
-</pre></div>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=6805d170-bed7-4313-95d7-5f248d530ea7">
-<div class="jp-Cell-inputWrapper" tabindex="0">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="3.-Searching-&amp;-Finding-Files-">3. Searching &amp; Finding Files <a id="searching-files"></a><a class="anchor-link" href="#3.-Searching-&amp;-Finding-Files-">¶</a></h2><table>
-<thead>
-<tr>
-<th>Command</th>
-<th>Description</th>
-<th>Linux/macOS</th>
-<th>Windows</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><code>find . -name "filename"</code></td>
-<td>Find a file in the current directory</td>
-<td>✅</td>
-<td>❌</td>
-</tr>
-<tr>
-<td><code>dir /s filename</code></td>
-<td>Find a file in the current directory</td>
-<td>❌</td>
-<td>✅</td>
-</tr>
-<tr>
-<td><code>grep "text" filename</code></td>
-<td>Search for text inside a file</td>
-<td>✅</td>
-<td>❌</td>
-</tr>
-<tr>
-<td><code>findstr "text" filename</code></td>
-<td>Search for text inside a file</td>
-<td>❌</td>
-<td>✅</td>
-</tr>
-</tbody>
-</table>
-</div>
-</div>
-</div>
-</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs" id="cell-id=d8424af8-6be9-49b0-bca4-46ce047bcfc5">
-<div class="jp-Cell-inputWrapper" tabindex="0">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In [57]:</div>
-<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
-<div class="cm-editor cm-s-jupyter">
-<div class="highlight hl-ipython3"><pre><span></span><span class="c1"># these commands will not work in Jupyter Notebook (use a terminal)</span>
-</pre></div>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=79b06532-ffc0-47d5-a303-0383d972df8f">
-<div class="jp-Cell-inputWrapper" tabindex="0">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="4.-System-Information-">4. System Information <a id="system-info"></a><a class="anchor-link" href="#4.-System-Information-">¶</a></h2><table>
-<thead>
-<tr>
-<th>Command</th>
-<th>Description</th>
-<th>Linux/macOS</th>
-<th>Windows</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><code>whoami</code></td>
-<td>Display current user</td>
-<td>✅</td>
-<td>✅</td>
-</tr>
-<tr>
-<td><code>hostname</code></td>
-<td>Display system hostname</td>
-<td>✅</td>
-<td>✅</td>
-</tr>
-<tr>
-<td><code>df -h</code></td>
-<td>Show disk space usage</td>
-<td>✅</td>
-<td>❌</td>
-</tr>
-<tr>
-<td><code>free -m</code></td>
-<td>Show memory usage</td>
-<td>✅</td>
-<td>❌</td>
-</tr>
-<tr>
-<td><code>tasklist</code></td>
-<td>Show running processes</td>
-<td>❌</td>
-<td>✅</td>
-</tr>
-<tr>
-<td><code>ps aux</code></td>
-<td>Show running processes (Linux)</td>
-<td>✅</td>
-<td>❌</td>
-</tr>
-<tr>
-<td><code>top</code></td>
-<td>Display system resource usage</td>
-<td>✅</td>
-<td>❌</td>
-</tr>
-</tbody>
-</table>
-</div>
-</div>
-</div>
-</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs" id="cell-id=28686b82-3029-4a8d-915e-92aa4e530408">
-<div class="jp-Cell-inputWrapper" tabindex="0">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In [55]:</div>
-<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
-<div class="cm-editor cm-s-jupyter">
-<div class="highlight hl-ipython3"><pre><span></span><span class="c1"># These commands will not work in Jupyter Notebook (use a terminal)</span>
-</pre></div>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=95b760f0-74d8-4367-9172-4ef717536503">
-<div class="jp-Cell-inputWrapper" tabindex="0">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="5.-Networking-Commands-">5. Networking Commands <a id="networking"></a><a class="anchor-link" href="#5.-Networking-Commands-">¶</a></h2><table>
-<thead>
-<tr>
-<th>Command</th>
-<th>Description</th>
-<th>Linux/macOS</th>
-<th>Windows</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><code>ping google.com</code></td>
-<td>Test network connection</td>
-<td>✅</td>
-<td>✅</td>
-</tr>
-<tr>
-<td><code>ifconfig</code></td>
-<td>Show network details</td>
-<td>✅</td>
-<td>❌</td>
-</tr>
-<tr>
-<td><code>ipconfig</code></td>
-<td>Show network details (Windows)</td>
-<td>❌</td>
-<td>✅</td>
-</tr>
-</tbody>
-</table>
-</div>
-</div>
-</div>
-</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs" id="cell-id=f99d44ae-25ee-44b0-9d17-72d700106ff8">
-<div class="jp-Cell-inputWrapper" tabindex="0">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In [68]:</div>
-<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
-<div class="cm-editor cm-s-jupyter">
-<div class="highlight hl-ipython3"><pre><span></span><span class="c1"># These commands will not work in Jupyter Notebook (use a terminal)</span>
-</pre></div>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=9a2756e3-615c-4fcd-9544-ceef0ca97758">
-<div class="jp-Cell-inputWrapper" tabindex="0">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="6.-Archiving-&amp;-Compression-">6. Archiving &amp; Compression <a id="archiving"></a><a class="anchor-link" href="#6.-Archiving-&amp;-Compression-">¶</a></h2><table>
-<thead>
-<tr>
-<th>Command</th>
-<th>Description</th>
-<th>Linux/macOS</th>
-<th>Windows</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><code>zip -r archive.zip foldername</code></td>
-<td>Create a zip archive</td>
-<td>✅</td>
-<td>✅</td>
-</tr>
-<tr>
-<td><code>unzip archive.zip</code></td>
-<td>extract a zip archive</td>
-<td>✅</td>
-<td>✅</td>
-</tr>
-</tbody>
-</table>
-</div>
-</div>
-</div>
-</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs" id="cell-id=5e59bed2-9fe9-4987-ae74-7f73351c4343">
-<div class="jp-Cell-inputWrapper" tabindex="0">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In [1]:</div>
-<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
-<div class="cm-editor cm-s-jupyter">
-<div class="highlight hl-ipython3"><pre><span></span><span class="c1"># These commands will not work in Jupyter Notebook (use a terminal)</span>
+<div class="highlight hl-ipython3"><pre><span></span> 
 </pre></div>
 </div>
 </div>
