--- a/index.html
+++ b/index.html
@@ -83,8 +83,14 @@ details > *:not(summary) { animation: fadeInSlide 0.3s ease; }
   </details>
 </details>
 <details>
-<summary>Machine Learning Projects</summary>
-<div class='nested'><a href='notebooks/Machine Learning Projects/Apple_Music_Analyzer.html' target='_blank' rel='noopener noreferrer'>- Apple music analyzer</a></div>
+<summary>Leetcode</summary>
+<div class='nested'><a href='notebooks/Leetcode/Arrays & Strings.html' target='_blank' rel='noopener noreferrer'>- Arrays & strings</a></div>
+<div class='nested'><a href='notebooks/Leetcode/Time complexities.html' target='_blank' rel='noopener noreferrer'>- Time complexities</a></div>
+</details>
+<details>
+<summary>Python</summary>
+<div class='nested'><a href='notebooks/Python/1. Basics.html' target='_blank' rel='noopener noreferrer'>- 1. basics</a></div>
+<div class='nested'><a href='notebooks/Python/2. Classes.html' target='_blank' rel='noopener noreferrer'>- 2. classes</a></div>
 </details>
 <details>
 <summary>SQL</summary>
