added agile learning notebook and updated leetcode questions and answers

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@ details > *:not(summary) { animation: fadeInSlide 0.3s ease; }
 <img src='data-science-roadmap.png' alt='Learning Banner' style='width:80%; max-width:800px; border-radius:5px;'>
 </div></details>
 <details>
+<summary>Agile Methodologies</summary>
+<div class='nested'><a href='notebooks/Agile Methodologies/Agile Basics.html' target='_blank' rel='noopener noreferrer'>- Agile basics</a></div>
+</details>
+<details>
 <summary>Data Science</summary>
   <details>
   <summary>Coding</summary>
