--- a/index.html
+++ b/index.html
@@ -27,56 +27,8 @@ details > *:not(summary) { animation: fadeInSlide 0.3s ease; }
 <div class='nested'><a href='notebooks/Agile Methodologies/Agile Basics.html' target='_blank' rel='noopener noreferrer'>- Agile basics</a></div>
 </details>
 <details>
-<summary>Data Science</summary>
-  <details>
-  <summary>Coding</summary>
-    <details>
-    <summary>NumPy</summary>
-<div class='nested'><a href='notebooks/Data Science/Coding/NumPy/50_Numpy_Exercises.html' target='_blank' rel='noopener noreferrer'>- 50 numpy exercises</a></div>
-<div class='nested'><a href='notebooks/Data Science/Coding/NumPy/NumPy.html' target='_blank' rel='noopener noreferrer'>- Numpy</a></div>
-    </details>
-<div class='nested'><a href='notebooks/Data Science/Coding/Pandas.html' target='_blank' rel='noopener noreferrer'>- Pandas</a></div>
-  </details>
-  <details>
-  <summary>Deep Learning</summary>
-  </details>
-  <details>
-  <summary>Econometrics</summary>
-  </details>
-  <details>
-  <summary>Exploratory Data Analysis</summary>
-  </details>
-  <details>
-  <summary>Machine Learning</summary>
-  </details>
-  <details>
-  <summary>Mathematics</summary>
-<div class='nested'><a href='notebooks/Data Science/Mathematics/Linear Algebra.html' target='_blank' rel='noopener noreferrer'>- Linear algebra</a></div>
-<div class='nested'><a href='notebooks/Data Science/Mathematics/Matrix Transformations.html' target='_blank' rel='noopener noreferrer'>- Matrix transformations</a></div>
-  </details>
-  <details>
-  <summary>Python Libraries</summary>
-    <details>
-    <summary>Pandas</summary>
-<div class='nested'><a href='notebooks/Data Science/Python Libraries/Pandas/01 Pandas.html' target='_blank' rel='noopener noreferrer'>- 01 pandas</a></div>
-    </details>
-  </details>
-  <details>
-  <summary>Statistics</summary>
-<div class='nested'><a href='notebooks/Data Science/Statistics/1. Introduction to Statistics.html' target='_blank' rel='noopener noreferrer'>- 1. introduction to statistics</a></div>
-<div class='nested'><a href='notebooks/Data Science/Statistics/2. Back to Basics.html' target='_blank' rel='noopener noreferrer'>- 2. back to basics</a></div>
-<div class='nested'><a href='notebooks/Data Science/Statistics/3. Hypothesis Testing.html' target='_blank' rel='noopener noreferrer'>- 3. hypothesis testing</a></div>
-    <details>
-    <summary>datasets</summary>
-    </details>
-    <details>
-    <summary>datasets2</summary>
-    </details>
-  </details>
-  <details>
-  <summary>Statistics Q&A</summary>
-<div class='nested'><a href='notebooks/Data Science/Statistics Q&A/01 Stats Q&A.html' target='_blank' rel='noopener noreferrer'>- 01 stats q&a</a></div>
-  </details>
+<summary>Docker</summary>
+<div class='nested'><a href='notebooks/Docker/Docker Introduction.html' target='_blank' rel='noopener noreferrer'>- Docker introduction</a></div>
 </details>
 <details>
 <summary>Kaggle</summary>
@@ -89,6 +41,8 @@ details > *:not(summary) { animation: fadeInSlide 0.3s ease; }
 <details>
 <summary>Leetcode</summary>
 <div class='nested'><a href='notebooks/Leetcode/Arrays & Strings.html' target='_blank' rel='noopener noreferrer'>- Arrays & strings</a></div>
+<div class='nested'><a href='notebooks/Leetcode/Hashing & Sets.html' target='_blank' rel='noopener noreferrer'>- Hashing & sets</a></div>
+<div class='nested'><a href='notebooks/Leetcode/Practice.html' target='_blank' rel='noopener noreferrer'>- Practice</a></div>
 <div class='nested'><a href='notebooks/Leetcode/Time complexities.html' target='_blank' rel='noopener noreferrer'>- Time complexities</a></div>
 </details>
 <details>
